Fix hovering misalignment on graph (#1499)
* Fix hovering misalignment on graph

* Increase side menu padding

* Mark detector title to be not sticky

--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -72,7 +72,6 @@ side-nav {
     font-size: 18px;
     font-weight: 600;
     width: 100%;
-    position: sticky;
     top:1px;
     background: var(--bodyBackgroundColor);
     padding: 0px 20px 0px 28px;
